--- a/pftools/config/Makefile.config.in
+++ b/pftools/config/Makefile.config.in
@@ -31,8 +31,6 @@ PARFLOW_TOOLS_BIN_DIR                 = $(OBJECT)/bin
 
 PARFLOW_TOOLS_LIBS = -L$(PARFLOW_LIB_DIR) -lparflow
 
-PARFLOW_TOOLS_SHLIB_CFLAGS = 
-
 PARFLOW_TOOLS_INCLUDE=-I/usr/X11R6/include/
 
 # Need to link to the tk/tcl libs
@@ -51,7 +49,7 @@ F77           = @F77@
 FFLAGS        = @F77_FLAGS@ $(FFLAGS_EXTRA)
 
 CC            = @CC@
-CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) 
+CFLAGS        = @C_FLAGS@ $(CFLAGS_EXTRA) @SHLIB_CFLAGS@
 
 CPPFLAGS      = @CPPFLAGS@ -I. \
 	        @INC_PATH@ \
