--- a/docs/usr_manual/Makefile
+++ b/docs/usr_manual/Makefile
@@ -1,10 +1,17 @@
-
 MANUAL = usr_manual
 INSTALL_DIR = $(PARFLOW_HELP)/usr_manual
 
 ONLINE_OPTS =\
  -show_section_numbers\
  -bottom_navigation
+
+LINK_FILES = do_online \
+	     inputps.tex \
+             html.sty \
+             html.perl \
+	     parflow.sty \
+             parflow.perl \
+             parflow.bib
 
 FILES =\
  manual.tex\
@@ -13,25 +20,34 @@ FILES =\
  intro.tex\
  models.tex \
  pfsystem.tex\
- start.tex
+ start.tex \
+ version.tex
 
 all: manual.ps manual/manual.html
-	
+
+version.tex : ../../parflow/parflow_lib/version.h
+	echo "\def\PFVersion{"`cut -d$ -f2 $PARFLOW_SRC/config/version.h`"}" > version.tex
+
 manual.ps: manual.dvi
 	@dvips -o manual.ps manual
 
 manual/manual.html: manual.dvi
 	@latex2html $(ONLINE_OPTS) manual.tex
-	@./do_online manual
+	@../lib/do_online manual
 
 #	bibtex manual
 manual.dvi: Makefile $(FILES)
+	@for i in ${LINK_FILES}; do     \
+	   if [ ! -h $$i ] ; then    \
+	     ln -s ../lib/$$i . ;\
+	   fi \
+	done 
 	@latex manual
 	@bibtex manual
 	@makeindex manual.idx
 	@latex manual
 	@latex manual
-	
+
 install:
 	@/bin/rm -fr $(INSTALL_DIR)/$(MANUAL)_html
 	@mkdir $(INSTALL_DIR)/$(MANUAL)_html
@@ -44,12 +60,17 @@ install:
 	@cp manual.ps $(INSTALL_DIR)/$(MANUAL).ps
 	@chgrp parflow $(INSTALL_DIR)/$(MANUAL).ps
 	@chmod 664 $(INSTALL_DIR)/$(MANUAL).ps
-		
+
 clean:
 	@/bin/rm -f *.aux *.bbl *.blg *.dvi *.log *.dlog *.toc
 	@/bin/rm -f *.idx *.ilg *.ind
 
 veryclean: clean
+	@for i in ${LINK_FILES}; do     \
+	   if [ -h $$i ] ; then    \
+	    rm $$i ; \
+	   fi \
+	done 
 	@/bin/rm -f  manual.ps
 	@/bin/rm -fr manual
 
