--- a/branches/smith84/pftools/docs/usr_manual/Makefile.in
+++ b/branches/smith84/pftools/docs/usr_manual/Makefile.in
@@ -1,3 +1,19 @@
+##
+## Copyright:	(c) 1997-2008 Lawrence Livermore National Security, LLC
+## Revision:	$LastChangedRevision: 2219 $
+## Modified:	$LastChangedDate: 2008-06-12 13:14:48 -0700 (Thu, 12 Jun 2008) $
+##
+## Description:	makefile for the parflow library and executable
+##
+
+include ./config/Makefile.config
+
+PARFLOW	      =	@top_srcdir@
+
+SUBDIR        = .
+SRCDIR        = @srcdir@
+OBJECT        = .
+
 MANUAL = usr_manual
 INSTALL_DIR = $(PARFLOW_HELP)/usr_manual
 
