--- a/pftools/Makefile.in
+++ b/pftools/Makefile.in
@@ -19,14 +19,13 @@ SUBDIR        = .
 VPATH	      =	@srcdir@
 OBJECT        = .
 
+SUBDIRS       = docs
+
 include $(OBJECT)/config/Makefile.config
 
 default: all
 
 all: $(PARFLOW_TOOLS_BIN_DIR)/pfwell_cat $(PARFLOW_TOOLS_BIN_DIR)/pfwell_data gms_tools $(PARFLOW_TOOLS_BIN_DIR)/$(PROJECT)$(PARFLOW_TOOLS_SHLIB_SUFFIX)
-
-INSTALL	    = sh @srcdir@/config/install-sh
-INSTDIR	    = @INSTDIR@
 
 #
 # For building pfwell_cat
@@ -111,13 +110,19 @@ $(PARFLOW_TOOLS_BIN_DIR)/$(PROJECT)$(PARFLOW_TOOLS_SHLIB_SUFFIX): Makefile $(TOO
 #pkgIndex.tcl: $(PROJECT)$(PFTOOLS_SHLIB_SUFFIX) Makefile.tcllib
 #	@echo 'pkg_mkIndex . $(LIB_FILES)' | tclsh8.0
 
+doc:
+	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
+
+
 #
 # For cleaning
 #
 clean:	
+	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
 	@$(PARFLOW_CLEAN) 
 
 install: all
+	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/lib
 	$(INSTALL) -d -m 755 $(PARFLOW_INSTALL_DIR)/bin
 	for i in bin/*; do				        \
@@ -127,8 +132,14 @@ install: all
 	   $(INSTALL) -c -m 644 $$i $(PARFLOW_INSTALL_DIR)/bin; \
 	done
 
+doc_install: doc
+	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
+
 veryclean: clean
+	@for DIR in $(SUBDIRS); do if test -d $$DIR; then (cd $$DIR && $(MAKE) $@) ; fi || exit 1; done
 	@rm -f $(PROJECT)$(PFTOOLS_SHLIB_SUFFIX)
 	@rm -f pfwell_cat pfwell_data gmstin2pfsrf gmssol2pfsol
 	@rm -f gmstinvertices projecttin gmstriangulate bgmsfem2pfsol
+	@rm -f Makefile config/Makefile.config
+	@rm -rf include bin lib
 
