--- a/pftools/configure.in
+++ b/pftools/configure.in
@@ -291,6 +291,21 @@ if test "${silo_PREFIX+set}" = set; then
   INC_PATH="$silo_INCLUDES $INC_PATH"
   AC_DEFINE(HAVE_SILO,1,SILO library is available so use it)
 fi
+AC_SUBST(silo_LIBS)
+
+dnl
+dnl Set variables for hdf5 support
+dnl
+CASC_SUPPORT_HDF5
+if test "${hdf5_PREFIX+set}" = set; then
+  LIBS="$hdf5_LIBS $LIBS"
+  CASC_SPLIT_LIBS_STRING(hdf5_LIBS,hdf5_LIB_PATH,hdf5_LIB_NAME)
+  LIB_PATH="$hdf5_LIB_PATH $LIB_PATH"
+  LIB_NAME="$hdf5_LIB_NAME $LIB_NAME"
+  INC_PATH="$hdf5_INCLUDES $INC_PATH"
+  AC_DEFINE(HAVE_HDF5,1,HDF5 library is available so use it)
+fi
+AC_SUBST(hdf5_LIBS)
 
 debug_ext=debug
 if test "$enable_opt" = "yes"; then
